# thread_local_scope

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: trybuild.rs
tests/ui/: escape.rs  escape.stderr  send.rs  send.stderr  synd_sync_direct.rs  synd_sync_direct.stderr
